--- a/config/set.conf
+++ b/config/set.conf
@@ -3,4 +3,7 @@ host = 127.0.0.1
 port = 7788
 
 [db]
-url = mysql+pymysql://root@localhost:3306/fingerprint
+url=mysql+pymysql://root@127.0.0.1:3306/fingerprint
+#username=root
+#password=123456
+#url=jdbc:mysql://localhost:3306/fingerprint?useUnicode=true&characterEncoding=UTF-8
